--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 <div class="brandingyijieqi brandingyijieqi-black"><div class="containeryijieqi linksyijieqi">友情链接：<ul></ul></div></div>
 
-<footer class="footer"><div class="containeryijieqi  mip-footer "><p class="text-center">币安binance官网APP下载_比特币合约_网格量化跟单交易平台</p><p class="text-center"> © 2023 <a data-type="mip" href="/" data-title="币安">币安</a> 币安(Binance)是全球领先的区块链数字资产交易平台，提供BTC、ETH、DOT、BNB等主流虚拟数字货币交易，为用户提供安全、公平、开放、高效的区块链数字资产交易服务。</p><p class="text-center"><a href="/">币安</a></p></div></footer>
+<footer class="footer"><div class="containeryijieqi  mip-footer "><p class="text-center">币安binance官网APP下载_比特币合约_网格量化跟单交易平台</p></div></footer>
 
 
 </body>
